--- a/index.html
+++ b/index.html
@@ -120,7 +120,19 @@
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
                 <ol>
-					
+                    <li>
+                        <div class="title">BScout: Direct Whole Patch Presence Test for Java Executables.</div>
+                        <div class="author">Jiarun Dai, Zheyue Jiang, Yuan Zhang, Yingtian Zhou, Junyan Chen, Xinyu Xing, Xiaohan Zhang, Xin Tan, Min Yang, Zhemin Yang.</div>
+                        <div class="venue">In Proceedings of the 27th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020 (comming soon).
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title">App in the Middle : Demystify Application Virtualization in Android and its Security Threats to over 100 Million Users.</div>
+                        <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Mingqi Li, Sen Yang, Min Yang, Yuan Zhang, Zhiun Qian.</div>
+                        <div class="venue">In Proceedings of ACM SIGMETRICS / IFIP Performance 2019, Phoenix, Arizona, USA.
+                                <a href="./paper/app_virtualization_sigmetrics19.pdf">[PDF]</a>
+                        </div>
+                    </li>
                     <li>
                         <div class="title">How You Get Shot in the Back: A Systematical Study about Cryptojacking in the Real World.</div>
                         <div class="author">Geng Hong, Zhemin Yang, Sen Yang, Lei Zhang, Yuhong Nan, Zhibo Zhang, Min Yang, Yuan Zhang, Zhiyun Qian, Haixin Duan.</div>
