--- a/index.html
+++ b/index.html
@@ -121,8 +121,14 @@
             <div id="pub">
                 <ol>
                     <li>
+                        <div class="title">How Android Developers Handle Evolution-induced API Compatibility Issues: A Large-scale Study.</div>
+                        <div class="author">Hao Xia, Yuan Zhang, Yingtian Zhou, Xiaoting Chen, Yang Wang, Xiangyu Zhang, Shuaishuai Cui, Gen Hong, Xiaohan Zhang, Min Yang, Zhemin Yang.</div>
+                        <div class="venue">In Proceedings of the 42nd International Conference on Software Engineering, ICSE'20, Seoul, South Korea, May 23-29, 2020 (comming soon).
+                        </div>
+                    </li>                    
+                    <li>
                         <div class="title">BScout: Direct Whole Patch Presence Test for Java Executables.</div>
-                        <div class="author">Jiarun Dai, Zheyue Jiang, Yuan Zhang, Yingtian Zhou, Junyan Chen, Xinyu Xing, Xiaohan Zhang, Xin Tan, Min Yang, Zhemin Yang.</div>
+                        <div class="author">Jiarun Dai, Yuan Zhang, Zheyue Jiang, Yingtian Zhou, Junyan Chen, Xinyu Xing, Xiaohan Zhang, Xin Tan, Min Yang, Zhemin Yang.</div>
                         <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020 (comming soon).
                         </div>
                     </li>
