--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
             </p>
             <p>
                 My research interests span all areas in system security and software analysis,
-                especially on Android security, static code analysis, managed runtime.
+                especially on open-source software security, vulnerability discovery/analysis/exploitation/mitigation, Android security.
             </p>
             <p style="font-size: 90%;">
                 <i><b>To prospective students/postdoctors.</b> If you want to work with me to tackle cutting-edge system security problems, 
@@ -299,10 +299,11 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[Feb, 2020] Join the TPC of <a href="http://securecomm.org/call-for-papers/">SecureComm 2020</a>. Welcome to submit!</li>
                     <li>[Dec, 2019] Paper accepted by Oakland 2020. Congrats Yuyu & Lei!</li>
                     <li>[Dec, 2019] Paper accepted by ICSE 2020. See you in Seoul!</li>
                     <li>[Nov, 2019] Paper accepted by USENIX Security 2020. Congrats Jiarun!</li>
-                    <li>[Nov, 2019] Join the TPC of <a href="http://esorics2020.sccs.surrey.ac.uk/">ESORICS 2020</a>. Welcome to submit!</li>
+                    <li>[Nov, 2019] Join the TPC of <a href="http://esorics2020.sccs.surrey.ac.uk/cfp.html">ESORICS 2020</a>. Welcome to submit!</li>
                 </ul>
             </div>
 
@@ -320,25 +321,26 @@
             <hr size=2>
             <h3><a name="publications">Publications</a></h3>
             <div id="pub">
-                <ol>
-                    <li>
-                        <div class="title">TextExerciser: Feedback-driven Text Input Exercising for Android Applications.</div>
-                        <div class="author">Yuyu He, Lei Zhang, Zhemin Yang, Yinzhi Cao, Keke Lian, Shuai Li, Wei Yang, Zhibo Zhang, Min Yang, Yuan Zhang, Haixin Duan.</div>
-                        <div class="venue">In Proceedings of the 41st IEEE Symposium on Security and Privacy, Oakland'20, San Francisco, CA, May 18-20, 2020 (comming soon).
-                        </div>
-                    </li>  
-                    <li>
-                        <div class="title">How Android Developers Handle Evolution-induced API Compatibility Issues: A Large-scale Study.</div>
-                        <div class="author">Hao Xia, Yuan Zhang, Yingtian Zhou, Xiaoting Chen, Yang Wang, Xiangyu Zhang, Shuaishuai Cui, Gen Hong, Xiaohan Zhang, Min Yang, Zhemin Yang.</div>
-                        <div class="venue">In Proceedings of the 42nd International Conference on Software Engineering, ICSE'20, Seoul, South Korea, May 23-29, 2020 (comming soon).
-                        </div>
-                    </li>                    
+                <ol>                   
                     <li>
                         <div class="title">BScout: Direct Whole Patch Presence Test for Java Executables.</div>
                         <div class="author">Jiarun Dai, Yuan Zhang, Zheyue Jiang, Yingtian Zhou, Junyan Chen, Xinyu Xing, Xiaohan Zhang, Xin Tan, Min Yang, Zhemin Yang.</div>
                         <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020 (comming soon).
                         </div>
                     </li>
+                    <li>
+                        <div class="title">How Android Developers Handle Evolution-induced API Compatibility Issues: A Large-scale Study.</div>
+                        <div class="author">Hao Xia, Yuan Zhang, Yingtian Zhou, Xiaoting Chen, Yang Wang, Xiangyu Zhang, Shuaishuai Cui, Gen Hong, Xiaohan Zhang, Min Yang, Zhemin Yang.</div>
+                        <div class="venue">In Proceedings of the 42nd International Conference on Software Engineering, ICSE'20, Seoul, South Korea, May 23-29, 2020 (comming soon).
+                        </div>
+                    </li> 
+                    <li>
+                        <div class="title">TextExerciser: Feedback-driven Text Input Exercising for Android Applications.</div>
+                        <div class="author">Yuyu He, Lei Zhang, Zhemin Yang, Yinzhi Cao, Keke Lian, Shuai Li, Wei Yang, Zhibo Zhang, Min Yang, Yuan Zhang, Haixin Duan.</div>
+                        <div class="venue">In Proceedings of the 41st IEEE Symposium on Security and Privacy, Oakland'20, San Francisco, CA, May 18-20, 2020.
+                            <a href="./paper/te-oakland20.pdf">[PDF]</a>
+                        </div>
+                    </li>  
                     <li>
                         <div class="title">App in the Middle : Demystify Application Virtualization in Android and its Security Threats to over 100 Million Users.</div>
                         <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Mingqi Li, Sen Yang, Min Yang, Yuan Zhang, Zhiun Qian.</div>
@@ -439,7 +441,7 @@
                         </div>
                     </li>
                     <li>
-                        <div class="title">Swift: A Registerbased JIT Compiler for Embedded JVMs.</div>
+                        <div class="title">Swift: A Register-based JIT Compiler for Embedded JVMs.</div>
                         <div class="author">Yuan Zhang, Min Yang, Bo Zhou, Zhemin Yang, Weihua Zhang, Binyu Zang.</div>
                         <div class="venue">In Proceedings of the 8th international conference on Virtual execution environments, VEE’12, London, UK, March 3-4, 2012.
                             <a href="./paper/swift-vee2012.pdf">[PDF]</a>
@@ -479,6 +481,7 @@
             <h3><a name="services">Services</a></h3>
             <div>TPC Member:<br>
                 <ul>
+                    <li>SecureComm 2020</i>
                     <li>ESORICS 2020</i>
                 </ul>
             </div>
