--- a/index.html
+++ b/index.html
@@ -299,10 +299,12 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
+                    <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> <i>This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 million transactions.</i></li>
+                    <li>[March, 2020] One paper (conditionally) accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> <i>This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li>
                     <li>[Feb, 2020] Join the TPC of <a href="http://securecomm.org/call-for-papers/">SecureComm 2020</a>. Welcome to submit!</li>
-                    <li>[Dec, 2019] Paper accepted by Oakland 2020. Congrats Yuyu & Lei!</li>
-                    <li>[Dec, 2019] Paper accepted by ICSE 2020. See you in Seoul!</li>
-                    <li>[Nov, 2019] Paper accepted by USENIX Security 2020. Congrats Jiarun!</li>
+                    <li>[Dec, 2019] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2020/">Oakland 2020</a>. Congrats Yuyu & Lei!</li>
+                    <li>[Dec, 2019] One paper accepted by <a href="https://2020.icse-conferences.org/">ICSE 2020</a>. See you in Seoul!</li>
+                    <li>[Nov, 2019] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Jiarun!</li>
                     <li>[Nov, 2019] Join the TPC of <a href="http://esorics2020.sccs.surrey.ac.uk/cfp.html">ESORICS 2020</a>. Welcome to submit!</li>
                 </ul>
             </div>
@@ -323,8 +325,20 @@
             <div id="pub">
                 <ol>                   
                     <li>
+                        <div class="title">PDiff: Semantic-based Patch Presence Testing for Downstream Kernels.</div>
+                        <div class="author">Zheyue Jiang, Yuan Zhang, Jun Xu, Qi Wen, Zhenghe Wang, Xiaohan Zhang, Xinyu Xing, Min Yang, Zhemin Yang.</div>
+                        <div class="venue">In Proceedings of the 27th ACM Conference on Computer and Communications Security, CCS, Orlando, USA, November 9-13, 2020 (conditionally accepted).
+                        </div>
+                    </li>
+                    <li>
                         <div class="title">BScout: Direct Whole Patch Presence Test for Java Executables.</div>
                         <div class="author">Jiarun Dai, Yuan Zhang, Zheyue Jiang, Yingtian Zhou, Junyan Chen, Xinyu Xing, Xiaohan Zhang, Xin Tan, Min Yang, Zhemin Yang.</div>
+                        <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020 (comming soon).
+                        </div>
+                    </li>
+                    <li>
+                        <div class="title">An Ever-evolving Game: Evaluation of Real-world Attacks and Defenses in Ethereum Ecosystem.</div>
+                        <div class="author">Shunfan Zhou, Zhemin Yang, Jie Xiang, Yinzhi Cao, Min Yang, Yuan Zhang.</div>
                         <div class="venue">In Proceedings of the 29th USENIX Security Symposium, Security’20, Boston, MA, USA, August 12-14, 2020 (comming soon).
                         </div>
                     </li>
@@ -342,16 +356,16 @@
                         </div>
                     </li>  
                     <li>
+                        <div class="title">Hybrid Malware Detection Approach with Feedback-directed Machine Learning.</div>
+                        <div class="author">Zhetao Li, Wenlin Li, Fuyuan Lin, Yi Sun, Min Yang, Yuan Zhang, Zhibo Wang.</div>
+                        <div class="venue">In SCIENCE CHINA Information Sciences, Volume 63, Issue 3: 139103(2020)
+                        </div>
+                    </li>
+                    <li>
                         <div class="title">App in the Middle : Demystify Application Virtualization in Android and its Security Threats to over 100 Million Users.</div>
                         <div class="author">Lei Zhang, Zhemin Yang, Yuyu He, Mingqi Li, Sen Yang, Min Yang, Yuan Zhang, Zhiun Qian.</div>
                         <div class="venue">In Proceedings of ACM SIGMETRICS / IFIP Performance 2019, Phoenix, Arizona, USA.
                                 <a href="./paper/app_virtualization_sigmetrics19.pdf">[PDF]</a>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="title">A Hybrid Malware Detection Approach with Feedback-directed Machine Learning.</div>
-                        <div class="author">Zhetao Li, Wenlin Li, Fuyuan Lin, Yi Sun, Min Yang, Yuan Zhang, Zhibo Wang.</div>
-                        <div class="venue">In SCIENCE CHINA Information Sciences 2018
                         </div>
                     </li>
                     <li>
@@ -455,7 +469,7 @@
             <div>Undergraduate level:<br>
                 <ul>
                     <li> Principles of Reverse Engineering <i>(in School of Computer Science)</i>
-                        <ul><li><i>Spring 2018, Spring 2019</i></li></ul>
+                        <ul><li><i>Spring 2018, Spring 2019, Spring 2020</i></li></ul>
                     </li>
                     <li> System Security: Attacks & Defenses <i>(in School of Software)</i>
                         <ul><li><i>Fall 2016, Fall 2017, Fall 2018, Fall 2019</i></li></ul>
@@ -469,7 +483,7 @@
             <div>Graduate level:<br>
                 <ul>
                     <li> Emerging Attack & Defense Techniques <i>(in School of Software)</i>
-                        <ul><li><i>Spring 2019</i></li></ul>
+                        <ul><li><i>Spring 2019, Spring 2020</i></li></ul>
                     </li>
                     <li> Computer Network Security <i>(in School of Software)</i>
                         <ul><li><i>Spring 2016, Spring 2017, Spring 2018</i></li></ul>
@@ -515,7 +529,7 @@
             </div>
 
             <br>
-            <center><small>Last Modified: December 19, 2019, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
+            <center><small>Last Modified: April 2, 2020, Contact: yuanxzhang [AT] fudan.edu.cn</small></center>
 
             <div id="tracker">
                     <a href="https://clustrmaps.com/site/1a417"  title="Visit tracker">
