--- a/index.html
+++ b/index.html
@@ -299,7 +299,7 @@
             <h3><a name="">News</a></h3>
             <div>
                 <ul>
-                    <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> <i>This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 million transactions.</i></li>
+                    <li>[April, 2020] One paper accepted by <a href="https://www.usenix.org/conference/usenixsecurity20">USENIX Security 2020</a>. Congrats Shunfan! <br/> <i>This paper performs a comprehensive measurement study on real-world attacks and defenses in Ethereum by analyzing 420 millions of transactions.</i></li>
                     <li>[March, 2020] One paper (conditionally) accepted by <a href="https://www.sigsac.org/ccs/CCS2020/index.html">CCS 2020</a>. Congrats Zheyue! <br/> <i>This paper proposes a semantic-based approach for patch presence testing on closed-source binaries. We made tremendous efforts to explore a reliable design to control complexities caused by low-level code variance.</i></li>
                     <li>[Feb, 2020] Join the TPC of <a href="http://securecomm.org/call-for-papers/">SecureComm 2020</a>. Welcome to submit!</li>
                     <li>[Dec, 2019] One paper accepted by <a href="https://www.ieee-security.org/TC/SP2020/">Oakland 2020</a>. Congrats Yuyu & Lei!</li>
